Updated controller and fixed some methods

--- a/src/gps/GPSFXML.fxml
+++ b/src/gps/GPSFXML.fxml
@@ -12,7 +12,7 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#loadTrack" text="Load" />
-                  <MenuItem mnemonicParsing="false" text="Track Stats" />
+                  <MenuItem onAction="#calcTrackStats" mnemonicParsing="false" text="Track Stats" />
                   <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit" />
             </items>
           </Menu>
