--- a/src/gps/GPSFXML.fxml
+++ b/src/gps/GPSFXML.fxml
@@ -22,22 +22,22 @@
         </menus>
       </MenuBar>
       <Label layoutX="168.0" layoutY="38.0" prefHeight="18.0" prefWidth="79.0" text="Track Selected:" />
-      <TextField fx:id="trackName" layoutX="265.0" layoutY="34.0" />
+      <TextField editable="false" fx:id="trackName" layoutX="265.0" layoutY="34.0" />
       <Spinner fx:id="trackSpinner" layoutX="414.0" layoutY="34.0" max="10" min="1" onMouseClicked="#changeTrackSelected" prefHeight="26.0" prefWidth="24.0" />
-      <TextField fx:id="maxLat" layoutX="168.0" layoutY="111.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="minLat" layoutX="319.0" layoutY="111.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="maxElev" layoutX="168.0" layoutY="193.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="minElev" layoutX="319.0" layoutY="193.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="dMiles" layoutX="168.0" layoutY="262.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="dKilometers" layoutX="319.0" layoutY="262.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="avSpeedKPH" layoutX="319.0" layoutY="342.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="avSpeedMPH" layoutX="168.0" layoutY="342.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="maxSpeedMPH" layoutX="168.0" layoutY="390.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="maxSpeedKPH" layoutX="319.0" layoutY="390.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="maxLat" layoutX="168.0" layoutY="111.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="minLat" layoutX="319.0" layoutY="111.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="maxElev" layoutX="168.0" layoutY="193.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="minElev" layoutX="319.0" layoutY="193.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="dMiles" layoutX="168.0" layoutY="262.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="dKilometers" layoutX="319.0" layoutY="262.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="avSpeedKPH" layoutX="319.0" layoutY="342.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="avSpeedMPH" layoutX="168.0" layoutY="342.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="maxSpeedMPH" layoutX="168.0" layoutY="390.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="maxSpeedKPH" layoutX="319.0" layoutY="390.0" prefHeight="26.0" prefWidth="94.0" />
       <Label layoutX="204.0" layoutY="90.0" text="Max" />
       <Label layoutX="356.0" layoutY="90.0" text="Min" />
-      <TextField fx:id="minLong" layoutX="319.0" layoutY="150.0" prefHeight="26.0" prefWidth="94.0" />
-      <TextField fx:id="maxLong" layoutX="168.0" layoutY="150.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="minLong" layoutX="319.0" layoutY="150.0" prefHeight="26.0" prefWidth="94.0" />
+      <TextField editable="false" fx:id="maxLong" layoutX="168.0" layoutY="150.0" prefHeight="26.0" prefWidth="94.0" />
       <Label layoutX="110.0" layoutY="115.0" text="Latitude" />
       <Label layoutX="105.0" layoutY="154.0" text="Longitude" />
       <Label layoutX="108.0" layoutY="197.0" text="Elevation" />
