--- a/src/gps/GPSFXML.fxml
+++ b/src/gps/GPSFXML.fxml
@@ -21,9 +21,8 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Label layoutX="168.0" layoutY="38.0" prefHeight="18.0" prefWidth="79.0" text="Track Selected:" />
-      <TextField fx:id="trackName" editable="false" layoutX="265.0" layoutY="34.0" />
-      <Spinner fx:id="trackSpinner" layoutX="414.0" layoutY="34.0" max="10" min="1" onMouseClicked="#changeTrackSelected" prefHeight="26.0" prefWidth="24.0" />
+      <Label layoutX="113.0" layoutY="38.0" prefHeight="18.0" prefWidth="79.0" text="Track Selected:" />
+      <Spinner fx:id="trackSpinner" layoutX="205.0" layoutY="34.0" onMouseClicked="#changeTrackStatDisplay" prefHeight="26.0" prefWidth="289.0" />
       <TextField fx:id="maxLat" editable="false" layoutX="168.0" layoutY="111.0" prefHeight="26.0" prefWidth="94.0" />
       <TextField fx:id="minLat" editable="false" layoutX="319.0" layoutY="111.0" prefHeight="26.0" prefWidth="94.0" />
       <TextField fx:id="maxElev" editable="false" layoutX="168.0" layoutY="193.0" prefHeight="26.0" prefWidth="94.0" />
