--- a/src/gps_plotter/PlotterFXML.fxml
+++ b/src/gps_plotter/PlotterFXML.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="gps_plotter.PlotterFXML"
+            fx:controller="gps_plotter.PlotterController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
