--- a/src/gps/GPSFXML.fxml
+++ b/src/gps/GPSFXML.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="441.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gps.GPSController">
+<AnchorPane prefHeight="441.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gps.GPSController">
    <children>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="600.0">
         <menus>
@@ -21,8 +21,13 @@
             <Menu mnemonicParsing="false" text="Graph">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#showPlotter" text="2D Plot" />
-                  <MenuItem mnemonicParsing="false" onAction="#showElevationGainVsTime" text="Elevation Gain Vs Time"/>
+                  <MenuItem mnemonicParsing="false" onAction="#showElevationGainVsTime" text="Elevation Gain Vs Time" />
               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Google Maps">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#showMapsWindow" text="Open Maps Window" />
+               </items>
             </Menu>
         </menus>
       </MenuBar>
