integrates Browser into main ui control

--- a/src/maps/Capture.fxml
+++ b/src/maps/Capture.fxml
@@ -14,17 +14,12 @@
 <?import javafx.scene.layout.*?>
 
 <!-- This Capture View shows what the GET google api request returns (in json) -->
+<?import maps.Browser?>
 <BorderPane maxHeight="-Infinity" minHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity"
             xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="maps.CaptureController"
             prefHeight="400.0" prefWidth="600.0">
-    <left>
-    </left>
-    <center>
-        <Button text="Send GET Request" onAction="#sendGET"/>
-        <TextField BorderPane.alignment="CENTER" fx:id="output">
-
-        </TextField>
-    </center>
+    <Button text="Load Another Track" onAction="#sendGET"/>
+    <Browser/>
 </BorderPane>
