Changed plotter button to just show plotter window. Made adjustments so change doesn't break functionality

--- a/src/gps/GPSFXML.fxml
+++ b/src/gps/GPSFXML.fxml
@@ -15,9 +15,7 @@
           </Menu>
             <Menu mnemonicParsing="false" text="Graph">
               <items>
-                <MenuItem mnemonicParsing="false" onAction="#showPlotter" text="2D Plot" />
-                  <MenuItem mnemonicParsing="false" onAction="#showElevationGainVsTime" text="Elevation Gain Vs Time" />
-                  <MenuItem mnemonicParsing="false" onAction="#showSpeedPlot" text="Instantaneous Speed " />
+                <MenuItem mnemonicParsing="false" onAction="#showPlotter" text="Open plotter" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Google Maps">
