--- a/src/gps_plotter/PlotterFXML.fxml
+++ b/src/gps_plotter/PlotterFXML.fxml
@@ -2,17 +2,18 @@
 
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.ToggleGroup?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="465.0" prefWidth="882.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gps_plotter.PlotterController">
     <children>
         <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="882.0">
@@ -42,8 +43,13 @@
       <CheckBox fx:id="showHideButton" layoutX="23.0" layoutY="69.0" mnemonicParsing="false" onAction="#showOrHide" selected="true" />
       <Label layoutX="2.0" layoutY="48.0" text="Show/Hide" />
       <TextArea fx:id="LegendText" editable="false" layoutX="312.0" layoutY="422.0" prefHeight="38.0" prefWidth="568.0" text="Dark Blue = &lt; 3 MPH     Light Blue = Between 3 &amp; 7 MPH     Green = Between 7 &amp; 10 MPH                                                 hi" visible="false" />
-      <Button fx:id="distanceKM" layoutX="441.0" layoutY="36.0" mnemonicParsing="false" onAction="#graphDistanceVsTimeKM" text="Kilometers" visible="false" />
-      <Button fx:id="distanceMI" layoutX="537.0" layoutY="36.0" mnemonicParsing="false" onAction="#graphDistanceVsTimeMI" text="Miles" visible="false" />
       <Label fx:id="distanceLabel" layoutX="348.0" layoutY="40.0" text="Distance Units:" visible="false" />
+      <RadioButton fx:id="distanceKM" layoutX="441.0" layoutY="40.0" mnemonicParsing="false" onAction="#graphDistanceVsTimeKM" prefHeight="17.0" prefWidth="91.0" text="Kilometers" visible="false">
+          <toggleGroup>
+              <ToggleGroup fx:id="distanceButtons" />
+          </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="distanceMI" layoutX="532.0" layoutY="40.0" mnemonicParsing="false" onAction="#graphDistanceVsTimeMI" prefHeight="17.0" prefWidth="91.0" text="Miles" visible="false" toggleGroup="$distanceButtons">
+      </RadioButton>
     </children>
 </AnchorPane>
