Work on the plot grade method, method to actually calculate grade, and added the FXML menu option to plot Grade to PlotterFXML

--- a/src/gps_plotter/PlotterFXML.fxml
+++ b/src/gps_plotter/PlotterFXML.fxml
@@ -13,6 +13,7 @@
                         <MenuItem mnemonicParsing="false" onAction="#exit" text="Close" />
                         <MenuItem mnemonicParsing="false" onAction="#graphTwoDPlot" text="View 2D Plot" />
                         <MenuItem mnemonicParsing="false" onAction="#graphPlotSpeedAlongPath" text="View Speed Plot" />
+                  <MenuItem mnemonicParsing="false" onAction="#graphPlotSpeedAlongPath" text="View Grade Plot" />
                         <MenuItem mnemonicParsing="false" onAction="#graphElevationGainVsTime" text="Elevation Gain vs Time" />
                     </items>
                 </Menu>
