--- a/src/gps_plotter/PlotterFXML.fxml
+++ b/src/gps_plotter/PlotterFXML.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="583.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gps_plotter.PlotterController">
     <children>
@@ -26,7 +27,7 @@
                 </Menu>
             </menus>
         </MenuBar>
-        <LineChart fx:id="lineChart" layoutX="376.0" layoutY="41.0" prefHeight="500.0" prefWidth="500.0">
+        <LineChart fx:id="lineChart" layoutX="375.0" layoutY="40.0" maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0">
             <xAxis>
                 <NumberAxis label="Meters(east and west)" side="BOTTOM" fx:id="xAxis" />
             </xAxis>
@@ -39,6 +40,11 @@
         <TableView fx:id="tableView" layoutX="8.0" layoutY="95.0" prefHeight="480.0" prefWidth="304.0" />
       <CheckBox fx:id="showHideButton" layoutX="23.0" layoutY="69.0" mnemonicParsing="false" onAction="#showOrHide" selected="true" />
       <Label layoutX="2.0" layoutY="48.0" text="Show/Hide" />
-      <TextArea fx:id="LegendText" editable="false" layoutX="318.0" layoutY="541.0" prefHeight="38.0" prefWidth="568.0" text="Dark Blue = &lt; 3 MPH     Light Blue = Between 3 &amp; 7 MPH     Green = Between 7 &amp; 10 MPH                                                 hi" />
+      <TextArea fx:id="LegendText" editable="false" layoutX="318.0" layoutY="541.0" prefHeight="38.0" prefWidth="568.0" text="Dark Blue = &lt; 3 MPH     Light Blue = Between 3 &amp; 7 MPH     Green = Between 7 &amp; 10 MPH" />
+      <Label fx:id="chartTitle" alignment="CENTER" layoutX="439.0" layoutY="28.0" prefHeight="27.0" prefWidth="423.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
