--- a/src/gps_plotter/PlotterFXML.fxml
+++ b/src/gps_plotter/PlotterFXML.fxml
@@ -51,12 +51,12 @@
       </Label>
       <TextArea fx:id="LegendText" editable="false" layoutX="362.0" layoutY="556.0" prefHeight="38.0" prefWidth="568.0" text="Dark Blue = &lt; 3 MPH     Light Blue = Between 3 &amp; 7 MPH     Green = Between 7 &amp; 10 MPH                                                 hi" visible="false" />
       <Label fx:id="distanceLabel" layoutX="317.0" layoutY="95.0" text="Distance Units:" visible="false" />
-      <RadioButton fx:id="distanceKM" layoutX="317.0" layoutY="119.0" mnemonicParsing="false" onAction="#graphDistanceVsTimeKM" prefHeight="17.0" prefWidth="91.0" text="Kilometers" visible="false">
+      <RadioButton fx:id="distanceKM" layoutX="317.0" layoutY="119.0" mnemonicParsing="false" onAction="#graphDistanceInKM" prefHeight="17.0" prefWidth="91.0" text="Kilometers" visible="false">
           <toggleGroup>
               <ToggleGroup fx:id="distanceButtons" />
           </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="distanceMI" layoutX="317.0" layoutY="145.0" mnemonicParsing="false" onAction="#graphDistanceVsTimeMI" prefHeight="17.0" prefWidth="91.0" text="Miles" toggleGroup="$distanceButtons" visible="false">
+      <RadioButton fx:id="distanceMI" layoutX="317.0" layoutY="145.0" mnemonicParsing="false" onAction="#graphDistanceInMI" prefHeight="17.0" prefWidth="91.0" text="Miles" toggleGroup="$distanceButtons" visible="false">
       </RadioButton>
     </children>
 </AnchorPane>
